# qwde

./: .gitignore  .gitmodules  Jenkinsfile  README.md  default.nix  webby.cabal
analytics/: build.gradle.kts
backend/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
backend/analytics/: build.gradle.kts
backend/analytics/src/main/java/qwde/analytics/: IndexEstimator.java
backend/analytics/src/main/java/qwde/analytics/aggregate/: Covariance.java  JensensAlpha.java  MovingAverage.java  Portfolio.java  StandardDeviation.java  StockOverview.java  Variance.java
backend/analytics/src/main/java/qwde/analytics/ml/: LinearRegression.java
backend/analytics/src/test/java/qwde/analytics/aggregate/: PortfolioTest.java  StandardDeviationTest.java  VarianceTest.java
backend/analytics/src/test/java/qwde/analytics/ml/: LinearRegressionTest.java
backend/dataprovider/: build.gradle.kts
backend/dataprovider/src/main/java/qwde/dataprovider/db/: DatabaseManager.java  StockDB.java
backend/dataprovider/src/main/java/qwde/dataprovider/kafka/: InMemoryKafkaStore.java
backend/dataprovider/src/main/java/qwde/dataprovider/kafka/db/: SqlliteKafkaStore.java
backend/dataprovider/src/main/java/qwde/dataprovider/kafka/serializer/: LocalDateTimeDeserializer.java  LocalDateTimeSerializer.java  StockTickerDeserializer.java  StockTickerSerializer.java
backend/dataprovider/src/main/java/qwde/dataprovider/models/: CompanyStockData.java  IStockTicker.java  StockTicker.java
backend/dataprovider/src/main/java/qwde/dataprovider/pystock/: App.java  PystockDataReader.java  PystockToDB.java
backend/dataprovider/src/main/java/qwde/dataprovider/util/: DateUtil.java  FileUtil.java
backend/dataprovider/src/main/resources/: database.properties
backend/dataprovider/src/test/java/qwde/dataprovider/kafka/: KafkaTest.java
backend/dataprovider/src/test/java/qwde/dataprovider/pystock/: PystockDataReaderTest.java
backend/gradle/config/checkstyle/: checkstyle.xml
backend/gradle/config/pmd/: pmd.xml
backend/trading/: build.gradle.kts
backend/trading/src/main/java/qwde/trading/aggregate/: AggregatesComputer.java
backend/trading/src/main/java/qwde/trading/engine/: TradeEngine.java
backend/trading/src/main/java/qwde/trading/model/: MarketOrder.java  Order.java  Summary.java  Trade.java
backend/trading/src/main/java/qwde/trading/realtime/algorithm/: BuyLowSellHigh.java  TradingAlgorithm.java
backend/trading/src/test/java/qwde/trading/realtime/algorithm/: BuyLowSellHighTest.java
backend/webapi/: build.gradle.kts
backend/webapi/src/main/java/qwde/webapi/: App.java
backend/webapi/src/main/java/qwde/webapi/models/: StockStatistics.java
backend/webapi/src/main/java/qwde/webapi/plotly/: FigureTemplate.java  LinePlotRenderer.java  PageRenderer.java
backend/webapi/src/main/java/qwde/webapi/servlets/: BollingerBrand.java  GenericNon200HttpHandler.java  Index.java  Portfolio.java  Random.java  SimpleMovingAverage.java  StockOverview.java  Tickers.java  TradeEngineServlet.java
backend/webapi/src/main/java/qwde/webapi/servlets/configuration/: TradeEngineConfiguration.java
backend/webapi/src/main/java/qwde/webapi/util/: FileUtil.java
backend/webapi/src/main/resources/: application-test.yml  application.yml
backend/webapi/src/test/java/qwde/webapi/servlets/: RandomTest.java  SimpleMovingAverageTest.java  TradingEngineTest.java
backend/webapi/views/rapidoc/: index.html
backend/webapi/views/swagger-ui/: index.html
cfg/: distributeConfigurationFiles.sh  hooks.json  reloadBackend.sh  reloadQwde.sh  runFrontend.sh  runWeb.sh
dataprovider/: build.gradle.kts
dataprovider/src/main/java/qwde/dataprovider/db/: StockDB.java
frontend/: .gitignore  .hlint.yaml  CHANGELOG.md  Dockerfile  Dockerfile_build  LICENSE  README.md  Setup.hs  build.gradle.kts  build_localhost.sh  cabal.project  default.nix  dependencies.nix  makeZip.sh  settings.gradle.kts
frontend/nix/: default.nix  overlay.nix
frontend/qwdeclient/: Main.hs  qwdeclient.cabal
frontend/qwdeclient/Util/: Color.hs
frontend/qwdeclient/Widget/: Flatpickr.hs
frontend/qwdeserver/: Gateway.hs  Html.hs  Main.hs  Manifest.hs  qwdeserver.cabal
frontend/qwdeserver/Util/Types/: Ticker.hs
frontend/qwdeshared/: Common.hs  qwdeshared.cabal
frontend/qwdeshared/Shared/Page/: Home.hs  MissingPage.hs  Plots.hs  Template.hs
frontend/qwdeshared/Shared/Scene/: Actions.hs  Model.hs  Routes.hs
frontend/qwdeshared/Shared/Util/: Constants.hs  Date.hs  Plot.hs  Web.hs
frontend/qwdeshared/Shared/Widget/: Flatpickr.hs
frontend/qwdeshared/Test/: TestMain.hs
frontend/qwdeshared/Test/Shared/Util/: Date.hs
frontend/qwdeutil/: qwdeutil.cabal
frontend/qwdeutil/Data/Graph/: Plotter.hs
frontend/qwdeutil/Test/: TestMain.hs
frontend/qwdeutil/Test/Data/Graph/: Plotter.hs
webapi/: build.gradle.kts  myspecfile.yml
webapi/src/main/java/qwde/webapi/: App.java
webapi/src/main/java/qwde/webapi/plotly/: FigureTemplate.java  PageRenderer.java
webapi/src/main/java/qwde/webapi/servlets/: BollingerBrand.java  GenericNon200HttpHandler.java  Random.java  SimpleMovingAverage.java  StockOverview.java
webapi/src/main/resources/: application.yml
webapi/src/test/java/qwde/webapi/servlets/: SimpleMovingAverageTest.java  TradingEngineTest.java
webapi/views/redoc/: index.html
