name:                qwde-frontend
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable qwdeserver
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghc-options:
    -O0 -threaded -Wall -rtsopts
  hs-source-dirs:
    qwdeserver
  other-modules: Util.Types.Ticker, Html
  build-depends:
    aeson
    , base < 5
    , bytestring
    , containers
    , heredoc
    , http-client
    , http-reverse-proxy
    , http-types
    , lens
    , lucid
    , miso
    , mtl
    , servant
    , servant-lucid
    , servant-client
    , servant-server
    , text
    , transformers
    , qwdeutil
    , qwdeshared
    , wai
    , wai-app-static
    , wai-extra
    , warp
  default-language:
    Haskell2010

library qwdeutil
  ghc-options:
    -O2 -Wall
  exposed-modules: Data.Graph.Plotter
  other-extensions: BangPatterns
    
  hs-source-dirs:
    qwdeutil
  build-depends:
    base < 5
    , colour
    , containers
    , heredoc
  default-language:
    Haskell2010


test-suite Utiltest
  type: exitcode-stdio-1.0
  other-modules:
    Test.Data.Graph.Plotter
  main-is:
   TestMain.hs 
  ghc-options:
    -O2 -threaded -Wall
  hs-source-dirs:
    ., ./Test
  build-depends:
    base < 5
    , containers
    , heredoc
    , HUnit
  default-language:
    Haskell2010

library qwdeshared
  ghc-options:
    -O2 -Wall
  exposed-modules: Touch
    , Shared.Page.Home
    , Shared.Page.MissingPage
    , Shared.Page.Plots
    , Shared.Page.Template
    , Shared.Scene.Actions
    , Shared.Scene.Model
    , Shared.Scene.Routes
    , Shared.Util.Constants
    , Shared.Util.Plot
    , Shared.Util.Web
  --other-modules: Page.Template
  other-extensions: BangPatterns
    
  hs-source-dirs:
    .
  build-depends:
    aeson
    , base < 5
    , colour
    , containers
    , miso
    , network-uri
    , servant
    , time
    , qwdeutil
  default-language:
    Haskell2010

flag Production {
    Description: Whether or not to use qwde.no as a backend, or localhost
    Default: False
}

executable qwdeclient
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  if flag(Production)
      ghcjs-options: -dedupe -DGHCJS_GC_INTERVAL=5000 -Wall -DPRODUCTION
  else
      ghcjs-options: -dedupe -DGHCJS_GC_INTERVAL=5000 -Wall
  hs-source-dirs:
    .
  other-modules: Widget.Flatpickr, Util.Color
  build-depends:
    base < 5
    , aeson
    , colour
    , containers
    , ghcjs-base
    , heredoc
    , lens
    , miso
    , qwdeshared
    , qwdeutil
    , random
    , servant
    , time
  default-language:
    Haskell2010
