name:                qwdeclient
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag Production {
    Description: Whether or not to use qwde.no as a backend, or localhost
    Default: False
}

executable qwdeclient
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  if flag(Production)
      ghcjs-options: -dedupe -DGHCJS_GC_INTERVAL=5000 -Wall -DPRODUCTION
  else
      ghcjs-options: -dedupe -DGHCJS_GC_INTERVAL=5000 -Wall
  hs-source-dirs:
    .
  other-modules: Util.Color
  build-depends:
    base < 5
    , aeson
    , colour
    , containers
    , ghcjs-base
    , heredoc
    , lens
    , miso
    , qwdeshared
    , qwdeutil
    , random
    , servant
    , time
  default-language:
    Haskell2010
