name:                qwdeserver
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable qwdeserver
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghc-options:
    -O0 -threaded -Wall -rtsopts
  hs-source-dirs:
    .
  other-modules: Manifest, Util.Types.Ticker, Html
  build-depends:
    aeson
    , base < 5
    , bytestring
    , containers
    , heredoc
    , http-client
    , http-reverse-proxy
    , http-types
    , lens
    , lucid
    , miso
    , mtl
    , servant
    , servant-lucid
    , servant-client
    , servant-server
    , text
    , transformers
    , qwdeutil
    , qwdeshared
    , wai
    , wai-app-static
    , wai-extra
    , warp
  default-language:
    Haskell2010
