name:                qwdeshared
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:
    -O2 -Wall
  exposed-modules: Shared.Page.Home
    , Shared.Page.MissingPage
    , Shared.Page.Plots
    , Shared.Page.Template
    , Shared.Scene.Actions
    , Shared.Scene.Model
    , Shared.Scene.Routes
    , Shared.Util.Constants
    , Shared.Util.Date
    , Shared.Util.Plot
    , Shared.Util.Web
  --other-modules: Page.Template
  other-extensions: BangPatterns
    
  hs-source-dirs:
    .
  build-depends:
    aeson
    , base < 5
    , colour
    , containers
    , miso
    , network-uri
    , servant
    , text
    , time
    , qwdeutil
  default-language:
    Haskell2010

test-suite Sharedtest
  type: exitcode-stdio-1.0
  other-modules:
    Shared.Util.Date
    Test.Shared.Util.Date
  main-is:
   TestMain.hs 
  ghc-options:
    -O2 -threaded -Wall
  hs-source-dirs:
    ., ./Test
  build-depends:
    base < 5
    , HUnit
    , colour
    , containers
    , heredoc
    , text
    , time
  default-language:
    Haskell2010
